--- a/package.json
+++ b/package.json
@@ -12,19 +12,17 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "babel-plugin-styled-components": "^1.8.0",
+    "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^6.1.0",
     "gatsby": "^2.0.0",
-    "gatsby-plugin-google-fonts": "^0.0.4",
     "gatsby-plugin-react-helmet": "^3.0.0",
-    "gatsby-plugin-styled-components": "^3.0.0",
+    "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-source-contentful": "^2.0.10",
     "gatsby-transformer-remark": "^2.1.7",
     "moment": "^2.22.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
-    "styled-components": "^3.4.10",
-    "styled-reset": "^1.6.0"
+    "styled-components": "^4.4.0"
   }
 }
