--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "description": "Simple Gatsby starter linked to Contentful",
+  "name": "ley-site",
+  "description": "Gatsby Contentful on Netlify",
   "license": "MIT",
-  "author": "Connor Wilson <me@cwlsn.com> (https://cwlsn.com)",
-  "homepage": "https://gatsby-simple-contentful-starter.netlify.com",
-  "bugs": "https://github.com/cwlsn/gatsby-simple-contentful-starter/issues",
-  "repository": "github:cwlsn/gatsby-simple-contentful-starter",
+  "author": "Jason Geiger <jjgeiger@130public.net>",
+  "homepage": "http://lookingeastyoga.com",
+  "bugs": "https://github.com/jasonjgeiger/lookingeastyoga/issues",
+  "repository": "git@github.com:jasonjgeiger/lookingeastyoga.git",
   "scripts": {
-    "develop": "gatsby develop",
+    "dev": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
     "dotenv": "^6.1.0",
-    "gatsby": "^2.0.0",
+    "gatsby": "^2.17.7",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-source-contentful": "^2.0.10",
     "gatsby-transformer-remark": "^2.1.7",
     "moment": "^2.22.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-helmet": "^5.2.0",
     "styled-components": "^4.4.0"
   }
