--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
+    "classnames": "^2.2.6",
     "dotenv": "^6.1.0",
     "gatsby": "^2.17.7",
     "gatsby-plugin-google-fonts": "^1.0.1",
@@ -20,6 +21,7 @@
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-source-contentful": "^2.0.10",
     "gatsby-transformer-remark": "^2.1.7",
+    "marked": "^0.7.0",
     "moment": "^2.22.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
