--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "classnames": "^2.2.6",
     "dotenv": "^6.1.0",
     "gatsby": "^2.17.7",
+    "gatsby-image": "^2.4.13",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.6.21",
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-source-contentful": "^2.0.10",
+    "gatsby-source-filesystem": "^2.3.22",
     "gatsby-transformer-remark": "^2.1.7",
+    "gatsby-transformer-sharp": "^2.5.11",
     "marked": "^0.7.0",
     "moment": "^2.22.2",
     "react": "^16.11.0",
